RESOLVED FIXED300787
[WPEPlatform] WPEAndroidBuffer fails to import EGLImage when EGL < 1.5
https://bugs.webkit.org/show_bug.cgi?id=300787
Summary [WPEPlatform] WPEAndroidBuffer fails to import EGLImage when EGL < 1.5
Jani Hautakangas
Reported 2025-10-15 05:02:48 PDT
Importing EGLImage fails because the code checks the wrong function pointer when EGL version is lower than 1.5.
Attachments
Jani Hautakangas
Comment 1 2025-10-15 05:06:31 PDT
EWS
Comment 2 2025-10-15 14:59:35 PDT
Committed 301583@main (240941a5bb0a): <https://commits.webkit.org/301583@main> Reviewed commits have been landed. Closing PR #52379 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.