[WPEPlatform] Fix WPEAndroidBuffer fails to import EGLImage when EGL < 1.5 https://bugs.webkit.org/show_bug.cgi?id=300787

Reviewed by Adrian Perez de Castro.

Importing EGLImage fails because the code checks the wrong function pointer
when EGL version is lower than 1.5.

* Source/WebKit/WPEPlatform/wpe/WPEBufferAndroid.cpp:
(wpeBufferAndroidImportToEGLImage):

Canonical link: https://commits.webkit.org/301583@main